# clawdnation

./: .gitignore  404.html  AUTHORITIES.md  BONDING_CURVE_LAUNCH_SYSTEM.md  BOOTSTRAP_UPDATES.md  CLWDN_DISTRIBUTION_FACTORY.md  COMPLETE_SYSTEM_OVERVIEW.md  CRITICAL_SECURITY_GAP.md  DEPLOYMENT_SUMMARY.md  DEVNET_DEPLOYMENT_GUIDE.md  DISPENSER_OPERATOR_FIX_SUMMARY.md  E2E_DEEP_DIVE.md  E2E_MOLTX_BOT_TEST.md  E2E_TEST_SCENARIO.md  E2E_TEST_STATUS.md  FACTORY_ECONOMICS_FOR_CLWDN.md  FINAL_VISION.md  FIX_REQUIRED.md  GOVERNANCE_MIGRATION_GUIDE.md  LP_BURN_VERIFICATION.md  MAINNET_AUDIT_COMPLETE.md  MAINNET_TOKEN_AUDIT.md  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  NATIVE_MULTISIG_ARCHITECTURE.md  NEW_DISPENSER_AUTHORITIES.md  PRODUCTION_READY_SUMMARY.md  PR_REVIEW_GUIDE.md  REAL_LP_IMPLEMENTATION_SUMMARY.md  ROLES.md  SECURITY_NOTES.md  SOLANA_MULTISIG_VESTING_GUIDE.md  TEST_RESULTS.md  TOKENOMICS_AUDIT.md  UPGRADE_SUMMARY.md  add-metadata.js  chat-handler.js  chat-widget.css  chat-widget.js  create-mint-with-metadata.js  (+43 more)
bootstrap/: Anchor.toml  UPGRADE.sh
bootstrap/programs/bootstrap/: Cargo.toml
bootstrap/programs/bootstrap/src/: lib.rs  lib_auto_split.rs  lib_backup.rs  lib_bonding_curve.rs  lib_with_lp.rs
configs/: balanced.json  bootstrap.json  community-first.json
data/: tweet-templates.json
dispenser/: Anchor.toml  Cargo.toml  bsAAPGNFeJuw4VdTyympFhAZvnfG3fPpzQ47K3wC9EW.json  package-lock.json  package.json
moltbook/: bot.js  processed-posts.json
moltx/: bot.js  processed-posts.json
public/: metadata.json
scripts/: README.md  create-pool-and-burn.js  (+4 more)
(+104 files in other folders)
