[package]
name = "bootstrap"
version = "0.1.0"
description = "CLWDN Bootstrap — on-chain SOL contribution tracking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bootstrap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
